<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/_250sdp"
    android:layout_height="@dimen/_200sdp"
    android:orientation="vertical"
    android:background="@drawable/dialog_background">


    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_padding"
        android:layout_marginEnd="@dimen/default_padding"
        android:layout_marginTop="@dimen/_16sdp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_padding"
                android:backgroundTint="@color/colorPrimary"
                android:fontFamily="@font/poppins_normal"
                android:hint="@string/description"
                android:inputType="text"
                android:textSize="@dimen/normal" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_padding"
                android:backgroundTint="@color/colorPrimary"
                android:fontFamily="@font/poppins_normal"
                android:hint="@string/amount"
                android:inputType="numberDecimal"
                android:textSize="@dimen/normal" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>


    <Button
        android:id="@+id/btn_operation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_padding"
        android:layout_marginEnd="@dimen/default_padding"
        android:background="@drawable/button_background"
        android:fontFamily="@font/poppins_normal"
        android:layout_marginTop="@dimen/_32sdp"
        android:layout_marginBottom="@dimen/default_padding"
        android:text="@string/withdraw"
        android:textAllCaps="false"
        android:textColor="@color/colorText"
        android:textSize="@dimen/normal"
        android:layout_gravity="center"/>

</LinearLayout>