<?xml version="1.0" encoding="utf-8"?>

<layout>

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.shimirokach.bankingapp.ui.profile.ProfileViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.shimirokach.bankingapp.ui.profile.EditProfileActivity">

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="@dimen/_125sdp"
            android:layout_height="@dimen/_125sdp"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/ic_user" />

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView7"
            app:layout_constraintVertical_bias="0.0">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorPrimary"
                    android:fontFamily="@font/poppins_normal"
                    android:hint="@string/old_password"
                    android:inputType="textPassword"
                    android:text="@={viewModel.oldPassword}"
                    android:textSize="@dimen/normal" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorPrimary"
                    android:fontFamily="@font/poppins_normal"
                    android:hint="@string/new_password"
                    android:inputType="textPassword"
                    android:text="@={viewModel.newPassword}"
                    android:textSize="@dimen/normal" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorPrimary"
                    android:fontFamily="@font/poppins_normal"
                    android:hint="@string/full_name"
                    android:inputType="textPersonName"
                    android:text="@={viewModel.fullName}"
                    android:textSize="@dimen/normal" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background"
            android:fontFamily="@font/poppins_normal"
            android:onClick="@{(v) -> viewModel.onUpdateButtonClick(v)}"
            android:text="@string/update"
            android:textAllCaps="false"
            android:textColor="@color/colorText"
            android:textSize="@dimen/normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/linearLayout4"
            app:layout_constraintStart_toStartOf="@+id/linearLayout4"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
            app:layout_constraintVertical_bias="0.15" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>